# buildtwin-vision

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  docker-compose.dev.yml  docker-compose.yml  verification.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260719_0001_initial.py
backend/app/: cli.py  main.py
backend/app/api/: deps.py
backend/app/bim/: ifc_parser.py
backend/app/core/: config.py  security.py
backend/app/db/: session.py
backend/app/models/: entities.py
backend/app/reports/: pdf.py
backend/app/risk/: model.py
backend/app/schedule/: engine.py
backend/app/schemas/: common.py
backend/app/services/: audit.py  dashboard.py  public_dataset.py  seed.py
backend/app/vision/: change_detection.py  quality_candidates.py  video_reader.py  zone_geometry.py
backend/tests/: conftest.py  test_api.py  test_engines.py
docs/: API_GUIDE.md  ARCHITECTURE.md  BIM_INGESTION.md  CHANGELOG.md  CONTRIBUTING.md  DATASET.md  DEMO_GUIDE.md  DEPLOYMENT.md  DOMAIN_MODEL.md  LIMITATIONS.md  RISK_MODEL.md  ROADMAP.md  SCHEDULE_ENGINE.md  SECURITY.md  TESTING.md  VERIFICATION.md  VISION_PIPELINE.md
frontend/: eslint.config.mjs  next.config.ts  package-lock.json  package.json
frontend/tests/: navigation.test.mjs
scripts/: download_public_dataset.py  generate_demo.py  render_previews.py  smoke_api.py
(+30 files in other folders)
