[project]
name = "buildtwin-vision-api"
version = "1.0.0"
description = "Evidence-first 4D construction intelligence API"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "sqlalchemy>=2.0,<3",
  "alembic>=1.13,<2",
  "pydantic>=2.8,<3",
  "PyJWT>=2.8,<3",
  "python-multipart>=0.0.9,<1",
  "opencv-python-headless>=4.10,<5",
  "numpy>=2.0,<3",
  "networkx>=3.3,<4",
  "shapely>=2.0,<3",
  "reportlab>=4.2,<5",
  "psycopg[binary]>=3.2,<4"
]

[project.optional-dependencies]
dev = ["pytest>=8,<10", "httpx>=0.27,<1", "ruff>=0.8,<1", "mypy>=1.13,<2"]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 140
target-version = "py312"
exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501", "E701", "E702", "E741", "F403", "F405"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = true
no_implicit_optional = true
exclude = ["alembic"]
